fixed index, products, promotions, reviews styles

--- a/products.html
+++ b/products.html
@@ -50,12 +50,11 @@
                 <div class="row align-items-center">
                     <div class="col-md-8">
                         <div class="d-flex flex-wrap gap-2">
-                            <button class="btn btn-primary glass-btn filter-btn active" data-filter="all">All Products</button>
+                            <button class="btn btn-primary glass-btn filter-btn" data-filter="all">All Products</button>
                             <button class="btn btn-outline-light glass-btn-outline filter-btn" data-filter="tents">Tents</button>
                             <button class="btn btn-outline-light glass-btn-outline filter-btn" data-filter="cookware">Cookware</button>
                             <button class="btn btn-outline-light glass-btn-outline filter-btn" data-filter="sleeping">Sleeping Gear</button>
                             <button class="btn btn-outline-light glass-btn-outline filter-btn" data-filter="backpacks">Backpacks</button>
-                            <button class="btn btn-outline-light glass-btn-outline filter-btn" data-filter="accessories">Accessories</button>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -84,7 +83,7 @@
                             <h5 class="card-title text-white">Alpine Pro Tent</h5>
                             <p class="card-text text-white-75">4-season professional tent for extreme conditions</p>
                             <div class="d-flex justify-content-between align-items-center mb-3">
-                                <span class="h5 text-primary mb-0">$299.99</span>
+                                <span class="h5 text-forest mb-0">$299.99</span>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
                                     <i class="fas fa-star text-warning"></i>
@@ -106,7 +105,7 @@
                             <h5 class="card-title text-white">Family Dome Tent</h5>
                             <p class="card-text text-white-75">Spacious 6-person tent with easy setup</p>
                             <div class="d-flex justify-content-between align-items-center mb-3">
-                                <span class="h5 text-primary mb-0">$199.99</span>
+                                <span class="h5 text-forest mb-0">$199.99</span>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
                                     <i class="fas fa-star text-warning"></i>
@@ -129,7 +128,7 @@
                             <h5 class="card-title text-white">Trail Chef Set</h5>
                             <p class="card-text text-white-75">Complete cooking kit for 4 people</p>
                             <div class="d-flex justify-content-between align-items-center mb-3">
-                                <span class="h5 text-primary mb-0">$89.99</span>
+                                <span class="h5 text-forest mb-0">$89.99</span>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
                                     <i class="fas fa-star text-warning"></i>
@@ -151,7 +150,7 @@
                             <h5 class="card-title text-white">Portable Camp Stove</h5>
                             <p class="card-text text-white-75">Lightweight gas stove with wind shield</p>
                             <div class="d-flex justify-content-between align-items-center mb-3">
-                                <span class="h5 text-primary mb-0">$45.99</span>
+                                <span class="h5 text-forest mb-0">$45.99</span>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
                                     <i class="fas fa-star text-warning"></i>
@@ -174,7 +173,7 @@
                             <h5 class="card-title text-white">Summit Sleeping Bag</h5>
                             <p class="card-text text-white-75">-10°F rated down sleeping bag</p>
                             <div class="d-flex justify-content-between align-items-center mb-3">
-                                <span class="h5 text-primary mb-0">$199.99</span>
+                                <span class="h5 text-forest mb-0">$199.99</span>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
                                     <i class="fas fa-star text-warning"></i>
@@ -196,7 +195,7 @@
                             <h5 class="card-title text-white">Comfort Sleep Pad</h5>
                             <p class="card-text text-white-75">Self-inflating sleeping pad with pillow</p>
                             <div class="d-flex justify-content-between align-items-center mb-3">
-                                <span class="h5 text-primary mb-0">$79.99</span>
+                                <span class="h5 text-forest mb-0">$79.99</span>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
                                     <i class="fas fa-star text-warning"></i>
@@ -219,7 +218,7 @@
                             <h5 class="card-title text-white">Explorer Backpack</h5>
                             <p class="card-text text-white-75">65L multi-day hiking backpack</p>
                             <div class="d-flex justify-content-between align-items-center mb-3">
-                                <span class="h5 text-primary mb-0">$149.99</span>
+                                <span class="h5 text-forest mb-0">$149.99</span>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
                                     <i class="fas fa-star text-warning"></i>
@@ -241,7 +240,7 @@
                             <h5 class="card-title text-white">Day Hiker Pack</h5>
                             <p class="card-text text-white-75">30L daypack with hydration system</p>
                             <div class="d-flex justify-content-between align-items-center mb-3">
-                                <span class="h5 text-primary mb-0">$89.99</span>
+                                <span class="h5 text-forest mb-0">$89.99</span>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
                                     <i class="fas fa-star text-warning"></i>
@@ -266,34 +265,44 @@
                     <h5 class="text-white mb-3">
                         <i class="fas fa-mountain me-2"></i>Camping Products Sales
                     </h5>
-                    <p class="text-white-75">Your trusted partner for outdoor adventures since 1995.</p>
-                </div>
-                <div class="col-lg-8">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <h6 class="text-white mb-3">Products</h6>
-                            <ul class="list-unstyled">
-                                <li><a href="#" class="text-white-75 text-decoration-none">Tents</a></li>
-                                <li><a href="#" class="text-white-75 text-decoration-none">Cookware</a></li>
-                                <li><a href="#" class="text-white-75 text-decoration-none">Sleeping Gear</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-4">
-                            <h6 class="text-white mb-3">Company</h6>
-                            <ul class="list-unstyled">
-                                <li><a href="about.html" class="text-white-75 text-decoration-none">About</a></li>
-                                <li><a href="contact.html" class="text-white-75 text-decoration-none">Contact</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="social-links">
-                                <a href="#" class="text-white me-3"><i class="fab fa-facebook"></i></a>
-                                <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
-                                <a href="#" class="text-white"><i class="fab fa-twitter"></i></a>
-                            </div>
-                        </div>
+                    <p class="text-white-75">Your trusted partner for outdoor adventures since 1995. Quality gear for every expedition.</p>
+                    <div class="social-links">
+                        <a href="#" class="text-white me-3"><i class="fab fa-facebook fa-lg"></i></a>
+                        <a href="#" class="text-white me-3"><i class="fab fa-instagram fa-lg"></i></a>
+                        <a href="#" class="text-white me-3"><i class="fab fa-twitter fa-lg"></i></a>
+                        <a href="#" class="text-white"><i class="fab fa-youtube fa-lg"></i></a>
                     </div>
                 </div>
+                <div class="col-lg-2 col-md-6">
+                    <h6 class="text-white mb-3">Products</h6>
+                    <ul class="list-unstyled">
+                        <li><a href="products.html?category=tents" class="text-white-75 text-decoration-none">Tents</a></li>
+                        <li><a href="products.html?category=cookware" class="text-white-75 text-decoration-none">Cookware</a></li>
+                        <li><a href="products.html?category=sleeping" class="text-white-75 text-decoration-none">Sleeping Gear</a></li>
+                        <li><a href="products.html?category=backpacks" class="text-white-75 text-decoration-none">Backpacks</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 col-md-6">
+                    <h6 class="text-white mb-3">Company</h6>
+                    <ul class="list-unstyled">
+                        <li><a href="about.html" class="text-white-75 text-decoration-none">About Us</a></li>
+                        <li><a href="contact.html" class="text-white-75 text-decoration-none">Contact</a></li>
+                        <li><a href="reviews.html" class="text-white-75 text-decoration-none">Reviews</a></li>
+                        <li><a href="membership.html" class="text-white-75 text-decoration-none">Membership</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4">
+                    <h6 class="text-white mb-3">Newsletter</h6>
+                    <p class="text-white-75 mb-3">Stay updated with our latest products and outdoor tips</p>
+                    <div class="input-group">
+                        <input type="email" class="form-control glass-input" placeholder="Enter your email">
+                        <button class="btn btn-primary glass-btn" type="button">Subscribe</button>
+                    </div>
+                </div>
+            </div>
+            <hr class="my-4 border-white-25">
+            <div class="text-center">
+                <p class="text-white-75 mb-0">&copy; 2024 Camping Products Sales. All rights reserved.</p>
             </div>
         </div>
     </footer>
