--- a/promotions.html
+++ b/promotions.html
@@ -80,7 +80,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="p-4">
-                                        <span class="badge bg-warning fs-6 mb-3">CLEARANCE</span>
+                                        <span class="badge bg-info fs-6 mb-3">CLEARANCE</span>
                                         <h2 class="text-white fw-bold mb-3">Tent Clearance Event</h2>
                                         <p class="text-white-75 mb-4">Last season's premium tents at unbeatable prices. While supplies last!</p>
                                         <a href="products.html?category=tents" class="btn btn-primary glass-btn btn-lg">View Tents</a>
@@ -136,7 +136,7 @@
                             <p class="card-text text-white-75">All-terrain boots with Gore-Tex lining</p>
                             <div class="d-flex justify-content-between align-items-center mb-3">
                                 <div>
-                                    <span class="h5 text-primary mb-0">$139.99</span>
+                                    <span class="h5 text-forest mb-0">$139.99</span>
                                     <span class="text-white-50 text-decoration-line-through ms-2">$199.99</span>
                                 </div>
                                 <div class="rating">
@@ -164,7 +164,7 @@
                             <p class="card-text text-white-75">Rechargeable with solar panel</p>
                             <div class="d-flex justify-content-between align-items-center mb-3">
                                 <div>
-                                    <span class="h5 text-primary mb-0">$37.49</span>
+                                    <span class="h5 text-forest mb-0">$37.49</span>
                                     <span class="text-white-50 text-decoration-line-through ms-2">$49.99</span>
                                 </div>
                                 <div class="rating">
@@ -192,7 +192,7 @@
                             <p class="card-text text-white-75">Lightweight with cup holder</p>
                             <div class="d-flex justify-content-between align-items-center mb-3">
                                 <div>
-                                    <span class="h5 text-primary mb-0">$32.49</span>
+                                    <span class="h5 text-forest mb-0">$32.49</span>
                                     <span class="text-white-50 text-decoration-line-through ms-2">$49.99</span>
                                 </div>
                                 <div class="rating">
@@ -220,7 +220,7 @@
                             <p class="card-text text-white-75">Removes 99.9% of bacteria</p>
                             <div class="d-flex justify-content-between align-items-center mb-3">
                                 <div>
-                                    <span class="h5 text-primary mb-0">$63.99</span>
+                                    <span class="h5 text-forest mb-0">$63.99</span>
                                     <span class="text-white-50 text-decoration-line-through ms-2">$79.99</span>
                                 </div>
                                 <div class="rating">
@@ -250,7 +250,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="glass-card product-card h-100 position-relative">
                         <div class="position-absolute top-0 end-0 m-3">
-                            <span class="badge bg-warning text-dark fs-6">
+                            <span class="badge bg-success fs-6">
                                 <i class="fas fa-crown me-1"></i>BESTSELLER
                             </span>
                         </div>
@@ -260,7 +260,7 @@
                             <h5 class="card-title text-white">Alpine Pro Tent</h5>
                             <p class="card-text text-white-75">4-season professional tent</p>
                             <div class="d-flex justify-content-between align-items-center mb-3">
-                                <span class="h5 text-primary mb-0">$299.99</span>
+                                <span class="h5 text-forest mb-0">$299.99</span>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
                                     <i class="fas fa-star text-warning"></i>
@@ -278,7 +278,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="glass-card product-card h-100 position-relative">
                         <div class="position-absolute top-0 end-0 m-3">
-                            <span class="badge bg-success fs-6">
+                            <span class="badge bg-danger fs-6">
                                 <i class="fas fa-fire me-1"></i>HOT
                             </span>
                         </div>
@@ -288,7 +288,7 @@
                             <h5 class="card-title text-white">Trail Chef Set</h5>
                             <p class="card-text text-white-75">Complete cooking kit for 4</p>
                             <div class="d-flex justify-content-between align-items-center mb-3">
-                                <span class="h5 text-primary mb-0">$89.99</span>
+                                <span class="h5 text-forest mb-0">$89.99</span>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
                                     <i class="fas fa-star text-warning"></i>
@@ -316,7 +316,7 @@
                             <h5 class="card-title text-white">Summit Sleeping Bag</h5>
                             <p class="card-text text-white-75">-10°F rated down bag</p>
                             <div class="d-flex justify-content-between align-items-center mb-3">
-                                <span class="h5 text-primary mb-0">$199.99</span>
+                                <span class="h5 text-forest mb-0">$199.99</span>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
                                     <i class="fas fa-star text-warning"></i>
@@ -359,7 +359,7 @@
                                     <li>LED lantern</li>
                                 </ul>
                                 <div class="d-flex align-items-center mb-3">
-                                    <span class="h4 text-primary mb-0">$249.99</span>
+                                    <span class="h4 text-forest mb-0">$249.99</span>
                                     <span class="text-white-50 text-decoration-line-through ms-2">$324.99</span>
                                 </div>
                                 <a href="#" class="btn btn-primary glass-btn">Get Bundle</a>
@@ -376,7 +376,7 @@
                                      class="img-fluid rounded-4" alt="Pro Bundle">
                             </div>
                             <div class="col-md-6">
-                                <span class="badge bg-warning text-dark fs-6 mb-3">SAVE $150</span>
+                                <span class="badge bg-success fs-6 mb-3">SAVE $150</span>
                                 <h4 class="text-white fw-bold mb-3">Professional Bundle</h4>
                                 <ul class="text-white-75 mb-4">
                                     <li>4-season tent</li>
@@ -386,7 +386,7 @@
                                     <li>Water filter</li>
                                 </ul>
                                 <div class="d-flex align-items-center mb-3">
-                                    <span class="h4 text-primary mb-0">$649.99</span>
+                                    <span class="h4 text-forest mb-0">$649.99</span>
                                     <span class="text-white-50 text-decoration-line-through ms-2">$799.99</span>
                                 </div>
                                 <a href="#" class="btn btn-primary glass-btn">Get Bundle</a>
