--- a/reviews.html
+++ b/reviews.html
@@ -52,7 +52,7 @@
                 <div class="row text-center">
                     <div class="col-md-3">
                         <div class="stat-item">
-                            <div class="h2 text-primary fw-bold">4.8</div>
+                            <div class="h2 text-forest fw-bold">4.8</div>
                             <div class="rating mb-2">
                                 <i class="fas fa-star text-warning"></i>
                                 <i class="fas fa-star text-warning"></i>
@@ -65,19 +65,19 @@
                     </div>
                     <div class="col-md-3">
                         <div class="stat-item">
-                            <div class="h2 text-primary fw-bold">1,247</div>
+                            <div class="h2 text-forest fw-bold">1,247</div>
                             <div class="text-white-75">Total Reviews</div>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="stat-item">
-                            <div class="h2 text-primary fw-bold">96%</div>
+                            <div class="h2 text-forest fw-bold">96%</div>
                             <div class="text-white-75">Satisfied Customers</div>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="stat-item">
-                            <div class="h2 text-primary fw-bold">28</div>
+                            <div class="h2 text-forest fw-bold">28</div>
                             <div class="text-white-75">Years in Business</div>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
                 <div class="row align-items-center">
                     <div class="col-md-6">
                         <div class="d-flex flex-wrap gap-2">
-                            <button class="btn btn-primary glass-btn filter-btn active" data-filter="all">All Reviews</button>
+                            <button class="btn btn-primary glass-btn filter-btn" data-filter="all">All Reviews</button>
                             <button class="btn btn-outline-light glass-btn-outline filter-btn" data-filter="5">5 Stars</button>
                             <button class="btn btn-outline-light glass-btn-outline filter-btn" data-filter="4">4 Stars</button>
                             <button class="btn btn-outline-light glass-btn-outline filter-btn" data-filter="3">3 Stars</button>
