--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
                 <div class="col-md-4">
                     <div class="glass-card h-100 text-center p-4">
                         <div class="category-icon mb-3">
-                            <i class="fas fa-campground fa-3x text-primary"></i>
+                            <i class="fas fa-campground fa-3x text-light"></i>
                         </div>
                         <h4 class="text-white mb-3">Tents & Shelters</h4>
                         <p class="text-white-75 mb-4">Premium tents for all weather conditions and group sizes</p>
-                        <a href="products.html?category=tents" class="btn btn-outline-primary glass-btn-outline">
+                        <a href="products.html?category=tents" class="btn btn-primary glass-btn">
                             View Products
                         </a>
                     </div>
@@ -89,11 +89,11 @@
                 <div class="col-md-4">
                     <div class="glass-card h-100 text-center p-4">
                         <div class="category-icon mb-3">
-                            <i class="fas fa-utensils fa-3x text-primary"></i>
+                            <i class="fas fa-utensils fa-3x text-light"></i>
                         </div>
                         <h4 class="text-white mb-3">Cookware</h4>
                         <p class="text-white-75 mb-4">Lightweight and durable cooking equipment for outdoor meals</p>
-                        <a href="products.html?category=cookware" class="btn btn-outline-primary glass-btn-outline">
+                        <a href="products.html?category=cookware" class="btn btn-primary glass-btn">
                             View Products
                         </a>
                     </div>
@@ -101,11 +101,11 @@
                 <div class="col-md-4">
                     <div class="glass-card h-100 text-center p-4">
                         <div class="category-icon mb-3">
-                            <i class="fas fa-bed fa-3x text-primary"></i>
+                            <i class="fas fa-bed fa-3x text-light"></i>
                         </div>
                         <h4 class="text-white mb-3">Sleeping Gear</h4>
                         <p class="text-white-75 mb-4">Comfortable sleeping bags and pads for restful nights</p>
-                        <a href="products.html?category=sleeping" class="btn btn-outline-primary glass-btn-outline">
+                        <a href="products.html?category=sleeping" class="btn btn-primary glass-btn">
                             View Products
                         </a>
                     </div>
@@ -130,7 +130,7 @@
                             <h5 class="card-title text-white">Alpine Pro Tent</h5>
                             <p class="card-text text-white-75">4-season professional tent</p>
                             <div class="d-flex justify-content-between align-items-center">
-                                <span class="h5 text-primary mb-0">$299.99</span>
+                                <span class="h5 text-forest mb-0">$299.99</span>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
                                     <i class="fas fa-star text-warning"></i>
@@ -150,7 +150,7 @@
                             <h5 class="card-title text-white">Trail Chef Set</h5>
                             <p class="card-text text-white-75">Complete cooking kit for 4</p>
                             <div class="d-flex justify-content-between align-items-center">
-                                <span class="h5 text-primary mb-0">$89.99</span>
+                                <span class="h5 text-forest mb-0">$89.99</span>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
                                     <i class="fas fa-star text-warning"></i>
@@ -170,7 +170,7 @@
                             <h5 class="card-title text-white">Summit Sleeping Bag</h5>
                             <p class="card-text text-white-75">-10°F rated down bag</p>
                             <div class="d-flex justify-content-between align-items-center">
-                                <span class="h5 text-primary mb-0">$199.99</span>
+                                <span class="h5 text-forest mb-0">$199.99</span>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
                                     <i class="fas fa-star text-warning"></i>
@@ -190,7 +190,7 @@
                             <h5 class="card-title text-white">Explorer Backpack</h5>
                             <p class="card-text text-white-75">65L multi-day pack</p>
                             <div class="d-flex justify-content-between align-items-center">
-                                <span class="h5 text-primary mb-0">$149.99</span>
+                                <span class="h5 text-forest mb-0">$149.99</span>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
                                     <i class="fas fa-star text-warning"></i>
